# promoter-dissection

./: README.md  information.ipynb  pyproject.toml  setup.py
notebooks/: nb1.ipynb  nb2.ipynb  nb3.ipynb
promdis/: __main__.py  core.py  helpers.py  main.py  processing.py
promdis/pl/: plotting.py
promdis/processing/: helpers.py
tests/: test_core.py  test_processing.py
tests/data/: test_dataset1.csv
